--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --primary: #00B87B;
+    --secondary: #314355;
+    --light: #F2F2F2;
+    --dark: #2C3E50;
+  }
