--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -11,22 +11,22 @@
   <div class="row g-5">
     <div class="col-lg-4 sticky-lg-top vh-100">
       <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
-        <img class="w-100 img-fluid mb-4" src="assets/profile.jpg" alt="Image">
-        <h1 class="text-success mt-2">John Doe</h1>
+        <img class="w-100 img-fluid mb-4" src="assets/profile1.png" alt="Image">
+        <h1 class="text-success mt-2">Kapil Ingle</h1>
         <div class="mb-4" style="height: 22px;">
           <h4 class="typed-text-output d-inline-block text-light"></h4>
-          <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer
+          <div class="typed-text d-none">Angular Developer, Software Developer, Front End Developer
           </div>
         </div>
-        <div class="d-flex justify-content-center mt-auto mb-3">
+        <div class="d-flex justify-content-center mt-auto mb-3 profile-icon">
           <a class="btn my-secondary btn-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
           <a class="btn my-secondary btn-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
           <a class="btn my-secondary btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
           <a class="btn my-secondary btn-square mx-1" href="#"><i class="fab fa-instagram"></i></a>
         </div>
-        <div class="d-flex align-items-end justify-content-between border-top">
-          <a href="" class="btn text-light w-50 shadow-lg border-end">Download CV</a>
-          <a href="#contact" class="btn text-light w-50 shadow-lg btn-scroll">Contact Me</a>
+        <div class="d-flex align-items-end justify-content-between my-btn">
+          <a href="" class="text-light w-50 shadow-lg text py-2" (click)="downloadResume()">Download CV</a>
+          <a href="#contact" class="text-light w-50 shadow-lg btn-scroll py-2">Contact Me</a>
         </div>
       </div>
     </div>
@@ -34,43 +34,37 @@
       <!-- About Start -->
       <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
         <h1 class="title pb-3 mb-5">About Me</h1>
-        <p class="text-white">Diam rebum sea stet rebum ea. Et kasd amet et accusam elitr voluptua. Tempor dolore sit et accusam ipsum erat
-          duo. Gubergren et takimata dolor duo amet et sanctus elitr lorem. Ipsum amet duo rebum dolor labore. No diam
-          duo lorem elitr dolor takimata elitr no. Magna et gubergren duo ipsum sed, amet ea voluptua dolores voluptua
-          dolor ipsum et. Sit takimata erat consetetur invidunt lorem consetetur. Lorem magna diam vero nonumy. Aliquyam
-          diam voluptua magna et magna nonumy. Accusam rebum clita et sit vero lorem, voluptua amet sit eos no et labore
-          vero, et consetetur justo et et sit aliquyam labore, sit erat lorem justo dolores kasd est sit. Dolor et
-          accusam ea et dolor sit.</p>
+        <p class="text-white">A well-versed front-end developer, proficient in Angular, HTML/CSS and JavaScript having good exposure to web development practices, familiar to Component, Services, Pipes, Directive, Forms, Routing concept and Life cycle hook in Angular.</p>
         <div class="row mb-4">
           <div class="col-sm-6 py-1">
-            <span class="fw-medium text-success">Name:</span> John Doe
+            <span class="fw-medium text-success">Name:</span> Kapil Ingle
           </div>
           <div class="col-sm-6 py-1">
-            <span class="fw-medium text-success">Birthday:</span> 1 April 1990
+            <span class="fw-medium text-success">Birthday:</span> 26 December 1996
           </div>
           <div class="col-sm-6 py-1">
-            <span class="fw-medium text-success">Degree:</span> Master
+            <span class="fw-medium text-success">Degree:</span> Bachelor of Engineering
           </div>
           <div class="col-sm-6 py-1">
-            <span class="fw-medium text-success">Experience:</span> 10 Years
+            <span class="fw-medium text-success">Experience:</span> 3 Years
           </div>
           <div class="col-sm-6 py-1">
-            <span class="fw-medium text-success">Phone:</span> +012 345 6789
+            <span class="fw-medium text-success">Mobile:</span> +91 9834959267
           </div>
           <div class="col-sm-6 py-1">
-            <span class="fw-medium text-success">Email:</span> info&#64;example.com
+            <span class="fw-medium text-success">Email:</span> codingkapil&#64;gamil.com
           </div>
           <div class="col-sm-6 py-1">
-            <span class="fw-medium text-success">Address:</span> 123 Street, New York, USA
+            <span class="fw-medium text-success">Address:</span> Mumbai, Maharashtra
           </div>
-          <div class="col-sm-6 py-1">
+          <!-- <div class="col-sm-6 py-1">
             <span class="fw-medium text-success">Freelance:</span> Available
-          </div>
+          </div> -->
         </div>
         <div class="row g-4">
           <div class="col-md-4 col-lg-6 col-xl-4">
             <div class="d-flex my-secondary p-4">
-              <h1 class="flex-shrink-0 display-5 fw-bold text-success mb-0" data-toggle="counter-up">10</h1>
+              <h1 class="flex-shrink-0 display-5 fw-bold text-success mb-0" data-toggle="counter-up">03</h1>
               <div class="ps-3">
                 <p class="mb-0">Years of</p>
                 <h5 class="mb-0">Experience</h5>
@@ -79,7 +73,7 @@
           </div>
           <div class="col-md-4 col-lg-6 col-xl-4">
             <div class="d-flex my-secondary p-4">
-              <h1 class="flex-shrink-0 display-5 fw-bold text-success mb-0" data-toggle="counter-up">100</h1>
+              <h1 class="flex-shrink-0 display-5 fw-bold text-success mb-0" data-toggle="counter-up">03</h1>
               <div class="ps-3">
                 <p class="mb-0">Happy</p>
                 <h5 class="mb-0">Clients</h5>
@@ -88,7 +82,7 @@
           </div>
           <div class="col-md-4 col-lg-6 col-xl-4">
             <div class="d-flex my-secondary p-4">
-              <h1 class="flex-shrink-0 display-5 fw-bold text-success mb-0" data-toggle="counter-up">200</h1>
+              <h1 class="flex-shrink-0 display-5 fw-bold text-success mb-0" data-toggle="counter-up">05</h1>
               <div class="ps-3">
                 <p class="mb-0">Complete</p>
                 <h5 class="mb-0">Projects</h5>
@@ -106,6 +100,15 @@
           <div class="col-sm-6">
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
+                <p class="mb-2">Angular</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="skill mb-4">
+              <div class="d-flex justify-content-between">
                 <p class="mb-2">HTML</p>
               </div>
               <div class="progress">
@@ -115,16 +118,25 @@
             </div>
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
-                <p class="mb-2">CSS</p>
+                <p class="mb-2">Bootstrap</p>
               </div>
               <div class="progress">
-                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                   aria-valuemax="100"></div>
               </div>
             </div>
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
-                <p class="mb-2">PHP</p>
+                <p class="mb-2">Postman</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="skill mb-4">
+              <div class="d-flex justify-content-between">
+                <p class="mb-2">SVN</p>
               </div>
               <div class="progress">
                 <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0"
@@ -144,16 +156,25 @@
             </div>
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
-                <p class="mb-2">Angular</p>
+                <p class="mb-2">CSS</p>
               </div>
               <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0"
+                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0"
                   aria-valuemax="100"></div>
               </div>
             </div>
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
-                <p class="mb-2">Wordpress</p>
+                <p class="mb-2">Angular Material</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="skill mb-4">
+              <div class="d-flex justify-content-between">
+                <p class="mb-2">Github</p>
               </div>
               <div class="progress">
                 <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0"
@@ -171,25 +192,25 @@
         <div class="border-start border-2 border-light pt-2 ps-5">
           <div class="position-relative mb-4">
             <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-            <h5 class="mb-1">Web Designer</h5>
-            <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
+            <h5 class="mb-1">Angular Front End Developer</h5>
+            <p class="mb-2">QLab Technologies Pvt Ltd, Bangalore. 
+              | <small>Feb 2021 - Apr 2023</small></p>
+            <p>I have been working on a Hotel monitoring and management project where I developed the user interface using Angular, HTML/CSS, and JavaScript. I have hands-on experience in creating reusable UI components with Angular, and I am proficient in using code versioning tools like GitHub. I was also involved in planning development strategies for the web page, studying the basic project requirements, and collaborating with the assigned technical lead to outline the necessary strategies.</p>
+          </div>
+          <div class="position-relative mb-4">
+            <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
+            <h5 class="mb-1">Associate Consultant</h5>
+            <p class="mb-2">Infrasoft Technologies Limited | <small>Jul 2023 - Till now</small></p>
             <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor
               dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
           </div>
-          <div class="position-relative mb-4">
+          <!-- <div class="position-relative mb-4">
             <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
             <h5 class="mb-1">Web Designer</h5>
             <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
             <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor
               dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
-          </div>
-          <div class="position-relative mb-4">
-            <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-            <h5 class="mb-1">Web Designer</h5>
-            <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
-            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor
-              dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
-          </div>
+          </div> -->
         </div>
       </section>
       <!-- Expericence End -->
@@ -360,32 +381,47 @@
         <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax &
           PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a class="text-success"
             href="https://htmlcodex.com/contact-form">Download Now</a></p>
-        <form>
+        <form [formGroup]="contactUsForm" (ngSubmit)="sendEmail()">
           <div class="row g-3">
             <div class="col-md-6">
               <div class="form-floating">
-                <input type="text" class="form-control border-0 my-secondary" id="name" placeholder="Your Name">
+                <input type="text" class="form-control border-0 my-secondary text-white" id="name" placeholder="Your Name" formControlName="name">
                 <label for="name">Your Name</label>
               </div>
+              @if(contactUsForm.controls['name'].invalid && contactUsForm.controls['name'].touched){
+                <small class="ms-3 text-danger">Please enter your name</small>
+              }
             </div>
             <div class="col-md-6">
               <div class="form-floating">
-                <input type="email" class="form-control border-0 my-secondary" id="email" placeholder="Your Email">
+                <input type="email" class="form-control border-0 my-secondary text-white" id="email" placeholder="Your Email"formControlName="email">
                 <label for="email">Your Email</label>
               </div>
+              @if(contactUsForm.controls['email']?.hasError('required') && contactUsForm.controls['name'].touched){
+                <small class="ms-3 text-danger">Please enter your email</small>
+              }
+              @if(contactUsForm.controls['email']?.hasError('email') && contactUsForm.controls['name'].touched){
+                <small class="ms-3 text-danger">Please enter valid email</small>
+              }
             </div>
             <div class="col-12">
               <div class="form-floating">
-                <input type="text" class="form-control border-0 my-secondary" id="subject" placeholder="Subject">
+                <input type="text" class="form-control border-0 my-secondary text-white" id="subject" placeholder="Subject" formControlName="subject">
                 <label for="subject">Subject</label>
               </div>
+              @if(contactUsForm.controls['subject'].invalid && contactUsForm.controls['subject'].touched){
+                <small class="ms-3 text-danger">Please enter your name</small>
+              }
             </div>
             <div class="col-12">
               <div class="form-floating">
-                <textarea class="form-control border-0 my-secondary" placeholder="" id="message"
-                  style="height: 200px"></textarea>
+                <textarea class="form-control border-0 my-secondary text-white" placeholder="" id="message"
+                  style="height: 200px" formControlName="msg"></textarea>
                 <label for="message">Message</label>
               </div>
+              @if(contactUsForm.controls['msg'].invalid && contactUsForm.controls['msg'].touched){
+                <small class="ms-3 text-danger">Please enter your name</small>
+              }
             </div>
             <div class="col-12">
               <button class="btn btn-success w-100 py-3" type="submit">Send Message</button>
