--- a/portfolio/src/app/app.component.scss
+++ b/portfolio/src/app/app.component.scss
@@ -28,10 +28,8 @@
     }
   }
 
-  .profile-icon{
-    a{
-      border: 1px solid gray;
-    }
+  .typed-element{
+    font-family: 'Courier New', Courier, monospace;
   }
   
   #spinner {
